--- a/bootstrap_theme/pendigital/factory_call_to_actions.scss
+++ b/bootstrap_theme/pendigital/factory_call_to_actions.scss
@@ -631,6 +631,465 @@
         }
     }
 }
+// end pd-CTA-7
+
+// start pd-CTA-8
+.pd-CTA-8 {
+    position: relative;
+
+    .pd-intro-heading-sm {
+        font-size: 0.9rem;
+        font-weight: 700;
+        color: white;
+        margin-bottom: 0px;
+    }
+
+    .pd-headline {
+        font-size: 2.4rem;
+        font-weight: 700;
+        color: white;
+    }
+
+    .pd-subHeadline {
+        color: white;
+        line-height: 1.5;
+    }
+
+    .pd-icon {
+        fill: white;
+        margin-right: 6px;
+    }
+
+    .pd-btn {
+        display: inline-flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        transition: background 0.3s;
+        border-radius: 50em;
+        padding: 16px 30px;
+        margin-right: 20px;
+        margin-bottom: 30px;
+        text-decoration: none;
+        font-weight: 700;
+        text-align: center;
+        white-space: nowrap;
+        cursor: pointer;
+
+        .pd-icon {
+            display: block;
+
+            img {
+                width: 40px;
+                height: 40px;
+                margin-right: 6px;
+            }
+        }
+
+        .pd-icon.pd-icon-rollover {
+            display: none;
+        }
+
+        &:hover {
+            text-decoration: none;
+
+            .pd-icon {
+                display: none;
+            }
+
+            .pd-icon.pd-icon-rollover {
+                display: block;
+            }
+        }
+    }
+
+    .pd-btn.pd-btn-white {
+        background: transparent;
+        border: 2px solid white;
+        color: white;
+
+        &:hover {
+            background: white;
+            color: $info;
+        }
+
+        &:focus-visible {
+            outline: 2px dotted white;
+            outline-offset: 4px;
+        }
+    }
+
+    .pd-btn.pd-btn-sm {
+        padding: 12px 30px;
+    }
+
+    .pd-brand-side {
+        position: absolute;
+        right: 30px;
+        top: 30px;
+    }
+
+    .pd-CTA-8-summary {
+        display: inline-block;
+        border: 2px solid #e7e7e7;
+        padding: 20px;
+        border-radius: 10px;
+        margin-bottom: 30px;
+
+        p {
+            margin-bottom: 8px;
+
+            &:last-child {
+                margin-bottom: 0px;
+            }
+        }
+
+        color: white;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-CTA-8-main-img-outer {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        min-height: 300px;
+        overflow: hidden;
+
+        @media (min-width: 577px) and (max-width: 991px) {
+            min-height: 500px;
+            margin-top: 20px;
+        }
+
+        .pd-CTA-8-main-img-overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.05) 40%, rgba(0, 0, 0, 0.05) 60%, rgba(0, 0, 0, 0.3) 100%);
+        }
+        
+
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+
+            
+        }
+    }
+
+    .pd-CTA-8-logos-outer {
+        p {
+            color: white;
+        }
+
+        .pd-CTA-8-grid {
+            border: 2px solid white;
+            border-radius: 10px;
+            background: rgba(255,255,255,0.9);
+            padding: 20px;
+
+            display: grid;
+            gap: 20px;
+            
+            @media screen and (max-width: 991px) {
+                grid-template-columns: 1fr 1fr;
+            }
+            
+            @media (min-width: 992px) {
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                
+            }
+
+            .pd-CTA-8-grid-card {
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
+                align-items: center;
+                img {
+                    width: 100%;
+                    height: auto;
+                    max-width: 90px;
+                }
+            }
+        }
+    }
+}
+
+// start pd-CTA-9
+.pd-CTA-9 {
+    background: #F2F7F2;
+
+    .pd-intro-heading-sm {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 10px;
+
+        h2 {
+            font-weight: 400;
+            color: #161B33;
+            font-size: 1rem;
+
+            // letter-spacing: 0.07em;
+            margin-bottom: 0px;
+        }
+
+        span {
+            img {
+                margin-right: 3px;
+                margin-top: -3px;
+            }
+        }
+    }
+
+    .pd-headline {
+        font-weight: 800;
+        color: #161B33;
+        line-height: 1.3;
+
+        @media screen and (max-width: 991px) {
+            font-size: 1.8rem;
+            margin-botom: 20px;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 3rem;
+            margin-bottom: 10px;
+        }
+    }
+
+    .pd-subHeadline {
+        line-height: 1.5;
+        font-weight: 300;
+        color: #161B33;
+        margin-bottom: 10px;
+
+        strong,
+        em {
+            font-weight: 800;
+        }
+
+        @media screen and (max-width: 991px) {
+            font-size: 0.9rem;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 1rem;
+        }
+    }
+
+    .pd-btn {
+        text-decoration: none;
+        color: #161B33;
+        margin-right: 20px;
+        padding: 12px 30px;
+        border-radius: 50em;
+        border: 2px solid #DE541E;
+
+        @media screen and (max-width: 991px) {
+            margin-bottom: 16px;
+        }
+
+        img {
+            margin-right: 4px;
+            width: 24px;
+            height: 24px;
+        }
+    }
+
+    .pd-CTA-9-photos-outer {
+        position: relative;
+
+        @media screen and (max-width: 575px) {
+            min-height: 420px;
+        }
+
+        @media (min-width: 576px) and (max-width: 1199px) {
+            min-height: 420px;
+        }
+
+        @media (min-width: 1200px) {
+            min-height: 550px;
+        }
+
+        .pd-CTA-9-photo {
+            position: absolute;
+            overflow: hidden;
+            box-shadow: 8px 8px 10px rgba(0,0,0,0.1);
+
+            @media screen and (max-width: 575px) {
+                width: 240px;
+                height: 160px;
+            }
+
+            @media (min-width: 576px) and (max-width: 1199px) {
+                width: 270px;
+                height: 178px;
+            }
+
+            @media (min-width: 1200px) {
+                width: 320px;
+                height: 210px;
+            }
+
+            img {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center center;
+            }
+        }
+
+        .pd-CTA-9-photo-top {
+            left: 0px;
+            top: 0px;
+        }
+
+        .pd-CTA-9-photo-middle {
+            right: 0px;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 3;
+        }
+
+        .pd-CTA-9-photo-bottom {
+            bottom: 0px;
+            left: 0px;
+        }
+    }
+}
+
+// end .pd-CTA-9
+// begin pd-CTA-10
+.pd-CTA-10 {
+    background: #218380;
+
+    .pd-intro-heading-sm {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 10px;
+
+        h2 {
+            font-weight: 400;
+            color: white;
+            font-size: 1rem;
+
+            // letter-spacing: 0.07em;
+            margin-bottom: 0px;
+        }
+
+        span {
+            img,
+            svg {
+                margin-right: 3px;
+                margin-top: -3px;
+                fill: white;
+            }
+        }
+    }
+
+    .pd-headline {
+        font-weight: 800;
+        color: white;
+        line-height: 1.3;
+
+        @media screen and (max-width: 991px) {
+            font-size: 1.8rem;
+            margin-botom: 20px;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 3rem;
+            margin-bottom: 10px;
+        }
+    }
+
+    .pd-subHeadline {
+        line-height: 1.5;
+        font-weight: 300;
+        color: white;
+        margin-bottom: 10px;
+
+        strong,
+        em {
+            font-weight: 800;
+        }
+
+        @media screen and (max-width: 991px) {
+            font-size: 0.9rem;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 1rem;
+        }
+    }
+
+    .pd-btn {
+        text-decoration: none;
+        color: white;
+        margin-right: 20px;
+        padding: 12px 30px;
+        border-radius: 50em;
+        border: 2px solid white;
+
+        @media screen and (max-width: 991px) {
+            margin-bottom: 16px;
+        }
+
+        img,
+        svg {
+            margin-right: 4px;
+            width: 24px;
+            height: 24px;
+            fill: white;
+        }
+    }
+
+    .pd-CTA-10-img-outer {
+        position: relative;
+        overflow: hidden;
+
+        @media screen and (max-width: 575px) {
+            height: 280px;
+            width: 280px;
+        }
+
+        @media (min-width: 576px) and (max-width: 767px) {
+            height: 240px;
+            width: 240px;
+        }
+
+        @media (min-width: 768px) and (max-width: 991px) {
+            height: 300px;
+            width: 300px;
+        }
+
+        @media (min-width: 992px) {
+            height: 280px;
+            width: 280px;
+        }
+
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+        }
+    }
+}
 
 
 
