--- a/bootstrap_theme/pendigital/factory_footers.scss
+++ b/bootstrap_theme/pendigital/factory_footers.scss
@@ -344,3 +344,177 @@
     }
 
 }
+// end pd-footer-3
+
+// start pd-footer-4
+.pd-footer-4 {
+    background: linear-gradient(rgba(42, 42, 42, 1) 0%, rgba(42, 42, 42, 0.95) 30%, rgba(42, 42, 42, 0.95) 60%, rgba(42,42,42,1) 100%);
+    padding-bottom: 80px;
+
+    .pd-footer-4-stmt-outer {
+        // padding: 0px 40px 40px 40px;
+
+        @media screen and (max-width: 991px) {
+            text-align: center;
+        }
+
+        @media (min-width: 992px) {
+            text-align: left;
+        }
+
+        h2 {
+            font-weight: 700;
+            font-size: 1rem;
+            margin-bottom: 4px;
+        }
+
+        p {
+            font-weight: 300;
+            line-height: 1.5;
+            font-size: 1rem;
+
+            em {
+                font-style: normal;
+                font-weight: 700;
+            }
+
+            
+        }
+    }
+
+    .pd-footer-4-link-outer {
+        display: flex;
+
+        @media screen and (max-width: 991px) {
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        @media (min-width: 992px) {
+            flex-direction: row;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+
+            @media screen and (max-width: 991px) {
+                margin-right: 0px;
+                margin-bottom: 8px;
+            }
+
+            @media (min-width: 992px) {
+                margin-right: 20px;
+
+                &:last-child {
+                    margin-right: 0px;
+                }
+            }
+        }
+    }
+
+    .pd-divider {
+        background-color: #c5247f;
+        height: 2px;
+        width: 100%;
+    }
+
+    .pd-footer-4-grid {
+        
+        @media screen and (max-width: 991px) {
+            padding: 40px;
+
+        }
+
+        @media (min-width: 992px) {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 20px;
+            // padding: 0px 40px 40px 40px;
+
+        }
+
+
+        .pd-footer-4-grid-card {
+            border: 2px solid #c5247f;
+            border-radius: 10px;
+            padding: 16px;
+            text-decoration: none;
+            transition: background .2s, border .2s;
+
+            &:hover {
+                background: rgba(255,255,255,.95);
+                border: 2px solid white;
+                color: #2a2a2a;
+
+                .pd-footer-4-grid-card-right-col {
+                    h2, p {
+                        color: #2a2a2a;
+                    }
+                }
+            }
+
+            @media screen and (max-width: 991px) {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: center;
+                margin-bottom: 20px;
+                text-align: center;
+            }
+            
+            @media (min-width: 992px) {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: flex-start;
+            }
+
+            .pd-footer-4-grid-card-left-col {
+                width: 50px;
+
+            }
+
+            .pd-footer-4-grid-card-right-col {
+                flex-grow: 1;
+                padding: 0px 10px 10px 10px;
+
+                h2 {
+                    font-size: 1.1rem;
+                    text-decoration: none;
+                    color: white;
+                    font-weight: 700;
+                }
+
+                @media screen and (max-width: 991px) {
+                    h2 {
+                        margin-top: 10px;
+                    }
+                }
+
+                p {
+                    text-decoration: none;
+                    color: white;
+                    font-size: 0.9rem;
+                }
+            }
+
+        }        
+
+    }
+
+    .pd-footer-link {
+        text-decoration: none;
+        color: $white;
+        margin-bottom: 10px;
+        font-size: 0.9rem;
+    }
+
+    .pd-footer-txt {
+        // margin-bottom: 3px;
+        font-size: 0.9rem;
+
+    }
+
+}
